Fixed broken CSS link and design improvements

--- a/AAIM/src/styles.scss
+++ b/AAIM/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,700&display=swap');
 
 $roast: #f5cd00;
@@ -219,15 +219,19 @@ p.credits {
             border: none;
             background: $roast;
             color: $darkhoney;
-
             h2 {
                 font-size: 55px;
                 font-weight: 700;
                 line-height: 1;
                 color: $darkhoney;
             }
+            p.lead {
+                font-size: 15px;
+                margin-top: -15px;
+            }
             img {
-                width: 100%;
+                width: auto;
+                max-height: 80vh;
             }
             blockquote {
                 font-size: 30px;
@@ -246,12 +250,14 @@ p.credits {
             border: none;
             background: $roast;
             color: $darkhoney;
-
             h2 {
                 font-size: 55px;
                 font-weight: 700;
                 line-height: 1;
                 color: $darkhoney;
+            }
+            p.placeofbirth {
+                margin: -10px 0 -5px 0;
             }
             p.bio {
                 line-height: 1.2;
@@ -259,7 +265,10 @@ p.credits {
             .photo {
                 position: relative;
                 img {
-                    width: 100%;
+                    width: auto;
+                    max-height: 80vh;
+                    display: block;
+                    margin: 0 auto;
                 }
                 .seephotos {
                     position: absolute;
@@ -347,11 +356,14 @@ p.credits {
         line-height: 1;
         color: $darkhoney;
     }
-
     p.votes {
         margin: 10px 0 0 0;
     }
-
+    .owl-carousel .owl-item img {
+        width: auto;
+        max-height: 90vh;
+        margin: 0 auto;
+    }
     .owl-carousel {
        .owl-dots {
            margin-top: 0;
